Banner + Header Bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
         <link rel="stylesheet" href="css/main.css" />
     </head>
     <body>
+	
+	        <!-- Header -->
+        <header id="header">
+            <div class="inner">
+                <a href="index.html" class="logo">The History of the Internet</a>
+                <nav id="nav">
+                    <a href="index.html">Home</a>
+                    <a href="articles.html">Articles</a>
+                    <a href="timeline.html">Timeline</a>
+                    <a href="contact.html">Contact Us</a>
+                </nav>
+            </div>
+        </header>
+       
+
+        <!-- Banner -->
+        <section id="banner">
+            <div class="inner">
+                <h1>The History of the Internet: <span>A Timeline</span></h1>
+                <ul class="actions">
+                    <li><a href="timeline.html" class="button alt">View Timeline</a></li>
+                </ul>
+            </div>
+        </section>
 
         <!-- Scripts -->
         <script src="src/jquery.min.js"></script>
