finish index and css cleaned up
index, added articles tidy up format

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="css/main.css" />
     </head>
     <body>
-	
-	        <!-- Header -->
+
+        <!-- Header -->
         <header id="header">
             <div class="inner">
                 <a href="index.html" class="logo">The History of the Internet</a>
@@ -31,6 +31,35 @@
                 </ul>
             </div>
         </section>
+
+        <!-- Articles -->
+        <section id="two">
+            <div class="inner">
+                <article>
+                    <div class="content">
+                        <header>
+                            <h3><a href="DNAAppStore.html">DNA App Store</a></h3>
+                        </header>
+                        <div class="image fit">
+                            <img src="img/DNA.jpg" alt="" />
+                        </div>
+                        <p>An online store for information about your genes will make it cheap and easy to learn more about your health risks and predispositions.</p>
+                    </div>
+                </article>
+                <article class="alt">
+                    <div class="content">
+                        <header>
+                            <h3><a href="robots.html">Robots That Teach Each Other</a></h3>
+                        </header>
+                        <div class="image fit">
+                            <img src="img/robots.jpg" alt="" />
+                        </div>
+                        <p>What if robots could figure out more things on their own and share that knowledge among themselves?</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
 
         <!-- Scripts -->
         <script src="src/jquery.min.js"></script>
